--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@inertiajs/vue3": "^1.0.0",
+        "@inertiajs/vue3": "^2.0.0-beta.1",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.2.1",
+        "tailwindcss": "^3.4",
         "vite": "^5.0",
         "vue": "^3.4.0"
     }
